--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@
 body {
   margin: 0;
   min-height: 100vh;
-  @apply bg-gray-50 text-textColor-primary;
+  @apply bg-gray-50 text-gray-800;
   font-weight: 400;
 }
 
